# TacticalRPGdemo

./: .MakeFile.kate-swp  .directory  .gitignore  .makefile.kate-swp  CMakeLists.txt  README.md  makefile
docs/: C++Features.docx
include/: Coordinate.h  Cursor.h  Music.h  Sound.h
include/ctr/: Castle.h  Character.h  Mage.h  Ninja.h
include/tact/: Character.h  CharacterMap.h  Controller.h  CoolText.h  Coordinate.h  Cursor.h  Exception.h  Fortress.h  Game.h  HumanPlayer.h  Knight.h  Mage.h  MainMenu.h  Main_Menu.h  Menu.h  Music.h  Ninja.h  Particle.h  Player.h  Selection.h  Selector.h  Sidebar.h  Sound.h  SpawnPoint.h  Speaker.cpp  Speaker.h  Spell.h  Sprite.h  SpriteMap.h  SpriteSheet.cpp  SpriteSheet.h  Tank.h  VertexMap.h  test.h
include/tact/chr/: Spell.h
include/tct/: VertexMap.h
share/audio/: sedTsR0si
share/textures/: map_tiles32.png.pp3  map_tiles32.png.xmp
src/: .directory  Coordinate.cpp  Cursor.cpp  Music.cpp  Player.cpp  Sound.cpp  Tank.cpp  VertexMap.cpp  main.cpp
src/Characters/: Castle.cpp  Character.cpp  Knight.cpp  Mage.cpp  Ninja.cpp  Player.cpp  Spell.cpp  Tank.cpp
src/include/: Castle.h  Character.h  Knight.h  Mage.h  Ninja.h  Player.h  Spell.h  Tank.h
src/tact/: Castle.cpp  Character.cpp  CharacterMap.cpp  Controller.cpp  CoolText.cpp  Coordinate.cpp  Cursor.cpp  Exception.cpp  Fortress.cpp  Game.cpp  HumanPlayer.cpp  Knight.cpp  Mage.cpp  MainMenu.cpp  Main_Menu.cpp  Menu.cpp  Music.cpp  Ninja.cpp  Particle.cpp  Player.cpp  Selection.cpp  Selector.cpp  Sidebar.cpp  Sound.cpp  SpawnPoint.cpp  Spell.cpp  Sprite.cpp  SpriteMap.cpp  Tank.cpp  VertexMap.cpp  test.cpp
src/tact/chr/: Spell.cpp
src/tct/ctr/: Mage.cpp  Ninja.cpp
